--- a/index.scss
+++ b/index.scss
@@ -38,11 +38,6 @@ html, body {
     height: 100%;
 }
 
-.wrapper {
-    height: calc(100% - 40px);
-    position: relative;
-}
-
 // ------------------ //
 //  Global
 // ------------------ //
@@ -198,6 +193,44 @@ textarea:focus {
 
     .fa {
         font-size: 1.5rem;
+    }
+}
+
+// ------------------ //
+//  Wrapper
+// ------------------ //
+
+.wrapper {
+    & {
+        height: calc(100% - 40px);
+        position: relative;
+    }
+
+    &.is-loading {
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.8;
+            background-color: $background;
+            z-index: 5000;
+        }
+
+        &:after {
+            @include loader;
+            position: absolute;
+            top: calc(50% - 2.5em);
+            left: calc(50% - 2.5em);
+            width: 5em;
+            height: 5em;
+            border-width: 0.4em;
+            zoom: 2;
+            z-index: 5000;
+        }
     }
 }
 
@@ -419,33 +452,6 @@ textarea:focus {
         height: calc(100% - 35px);
         position: relative;
         padding-bottom: 40px;
-    }
-
-    &.is-loading {
-        &:before {
-            content: '';
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.8;
-            background-color: $background;
-            z-index: 5000;
-        }
-
-        &:after {
-            @include loader;
-            position: absolute;
-            top: calc(50% - 2.5em);
-            left: calc(50% - 2.5em);
-            width: 5em;
-            height: 5em;
-            border-width: 0.4em;
-            zoom: 2;
-            z-index: 5000;
-        }
     }
 
     .sound-block {
