--- a/index.scss
+++ b/index.scss
@@ -81,6 +81,19 @@ textarea:focus {
     }
 }
 
+.ui-selectable-helper {
+    border: 2px dotted rgba($green, 0.7);
+    background: rgba($green, 0.1) !important;
+}
+
+.ui-selecting {
+    background: rgba($green, 0.2) !important;
+}
+
+.ui-selected {
+    background: rgba($green, 0.3) !important;
+}
+
 .notification {
     position: absolute;
     right: 20px;
@@ -561,6 +574,7 @@ textarea:focus {
 
     i {
         margin-right: 0.6rem;
+        margin-top: 2px;
         font-size: 1.3rem;
     }
 }
