--- a/index.css
+++ b/index.css
@@ -12909,7 +12909,7 @@ textarea:focus {
 }
 
 .wrapper {
-  height: calc(100% - 40px);
+  height: calc(100% - 30px);
   position: relative;
 }
 .wrapper.is-loading:before {
@@ -12988,8 +12988,8 @@ textarea:focus {
 
 .navbar.top {
   padding: 4px;
-  min-height: 40px;
-  height: 40px;
+  min-height: 30px;
+  height: 30px;
   user-select: none;
   justify-content: space-between;
   box-shadow: 0 1px 0 1px #4E5D6C;
@@ -13005,14 +13005,14 @@ textarea:focus {
 }
 
 .navbar.top .about {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   color: #5cb85c;
   flex-grow: 1;
   justify-content: center;
 }
 .navbar.top .about i {
   margin-right: 0.6rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 .navbar.top .about .author {
   font-weight: bold;
@@ -13032,7 +13032,8 @@ textarea:focus {
   border: 0;
   opacity: 0.7;
   margin: 0 !important;
-  height: 40px;
+  padding-top: 3px;
+  height: 30px;
 }
 .navbar.top .window .button:hover {
   opacity: 1;
@@ -13059,18 +13060,18 @@ textarea:focus {
   font-size: 1.5rem;
   border: 0;
   border-left: 1px solid #4E5D6C;
-  padding: 0.3rem 0.8rem;
+  padding: 0 0.8rem;
 }
 .tabs.is-toggle ul {
   flex: 1;
   flex-wrap: wrap;
-  min-height: 35px;
+  min-height: 30px;
 }
 .tabs.is-toggle li:focus {
   outline: none;
 }
 .tabs.is-toggle .link {
-  height: 35px;
+  height: 30px;
   padding: 0.5em 0 0.5em 0.5em;
 }
 .tabs.is-toggle .icon {
@@ -13116,7 +13117,7 @@ textarea:focus {
 
 .main {
   display: none;
-  height: calc(100% - 35px);
+  height: calc(100% - 30px);
   position: relative;
   padding-bottom: 40px;
 }
@@ -13153,7 +13154,7 @@ textarea:focus {
   position: absolute;
   right: 0;
   width: 100%;
-  height: 140px;
+  height: 130px;
   bottom: -100px;
   transition: bottom 0.5s;
   background-color: rgba(43, 62, 80, 0.95);
@@ -13178,12 +13179,12 @@ textarea:focus {
   border-bottom: 2px solid #4E5D6C;
 }
 .level-center .level-bottom {
-  height: calc(100% - 40px);
+  height: calc(100% - 30px);
 }
 .level-center .level-top,
 .level-center .navbar-item {
   font-size: 1.1rem;
-  height: 40px;
+  height: 30px;
 }
 .level-center .navbar-dropdown .navbar-item {
   padding: 0.5rem 1rem;
@@ -13237,9 +13238,10 @@ textarea:focus {
 }
 .navbar .level-right .button,
 .navbar .level-left .button {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin: 0;
+  padding: 0;
   border: 2px solid #4E5D6C;
 }
 .navbar .level-right .button + .button,
@@ -13270,21 +13272,21 @@ textarea:focus {
 }
 
 .has-right .navbar.level .deck-toggle {
-  margin-top: -40px !important;
+  margin-top: -30px !important;
   color: #5cb85c !important;
 }
 
 .panel {
   position: absolute;
   width: 250px;
-  height: calc(100% - 40px);
-  top: 40px;
+  height: calc(100% - 30px);
+  top: 30px;
   background-color: #1f2d3b;
   z-index: 2000;
 }
 .panel .panel-heading {
-  height: 35px;
-  padding: 0.15em 0.5em;
+  height: 30px;
+  padding: 0 0.5em;
   text-align: center;
 }
 .panel .count {
@@ -13328,7 +13330,7 @@ textarea:focus {
   height: 50%;
 }
 .panel.navigator .pages > .items {
-  height: calc(100% - 65px);
+  height: calc(100% - 60px);
 }
 .panel.navigator .pages .page {
   position: relative;
