--- a/index.scss
+++ b/index.scss
@@ -222,7 +222,7 @@ textarea:focus {
 
 .wrapper {
     & {
-        height: calc(100% - 40px);
+        height: calc(100% - 30px);
         position: relative;
     }
 
@@ -305,8 +305,8 @@ textarea:focus {
 
 .navbar.top {
     padding: 4px;
-    min-height: 40px;
-    height: 40px;
+    min-height: 30px;
+    height: 30px;
     user-select: none;
     justify-content: space-between;
     box-shadow: 0 1px 0 1px $border;
@@ -326,7 +326,7 @@ textarea:focus {
 
 .navbar.top .about {
     & {
-        font-size: $size-medium;
+        font-size: 1.1rem;
         color: $success;
         flex-grow: 1;
         justify-content: center;
@@ -334,7 +334,7 @@ textarea:focus {
 
     i {
         margin-right: 0.6rem;
-        font-size: $size-large;
+        font-size: 1.3rem;
     }
 
     .author {
@@ -359,7 +359,8 @@ textarea:focus {
         border: 0;
         opacity: 0.7;
         margin: 0 !important;
-        height: 40px;
+        padding-top: 3px;
+        height: 30px;
     }
 
     .button:hover {
@@ -396,13 +397,13 @@ textarea:focus {
         font-size: 1.5rem;
         border: 0;
         border-left: 1px solid $border;
-        padding: 0.3rem 0.8rem;
+        padding: 0 0.8rem;
     }
 
     ul {
         flex: 1;
         flex-wrap: wrap;
-        min-height: 35px;
+        min-height: 30px;
     }
 
     li:focus {
@@ -410,7 +411,7 @@ textarea:focus {
     }
 
     .link {
-        height: 35px;
+        height: 30px;
         padding: 0.5em 0 0.5em 0.5em;
     }
 
@@ -477,7 +478,7 @@ textarea:focus {
 .main {
     & {
         display: none;
-        height: calc(100% - 35px);
+        height: calc(100% - 30px);
         position: relative;
         padding-bottom: 40px;
     }
@@ -526,7 +527,7 @@ textarea:focus {
         position: absolute;
         right: 0;
         width: 100%;
-        height: 140px;
+        height: 130px;
         bottom: -100px;
         transition: bottom 0.5s;
         background-color: rgba($navbar-background-color, 0.95);
@@ -557,13 +558,13 @@ textarea:focus {
     }
 
     .level-bottom {
-        height: calc(100% - 40px);
+        height: calc(100% - 30px);
     }
 
     .level-top,
     .navbar-item {
         font-size: 1.1rem;
-        height: 40px;
+        height: 30px;
     }
 
     .navbar-dropdown .navbar-item {
@@ -631,9 +632,10 @@ textarea:focus {
     }
 
     .button {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         margin: 0;
+        padding: 0;
         border: 2px solid $border;
     }
 
@@ -671,7 +673,7 @@ textarea:focus {
 
 .has-right .navbar.level {
     .deck-toggle {
-        margin-top: -40px !important;
+        margin-top: -30px !important;
         color: $green !important;
     }
 }
@@ -684,15 +686,15 @@ textarea:focus {
     & {
         position: absolute;
         width: 250px;
-        height: calc(100% - 40px);
-        top: 40px;
+        height: calc(100% - 30px);
+        top: 30px;
         background-color: $grey-darker;
         z-index: 2000;
     }
 
     .panel-heading {
-        height: 35px;
-        padding: 0.15em 0.5em;
+        height: 30px;
+        padding: 0 0.5em;
         text-align: center;
     }
 
@@ -755,7 +757,7 @@ textarea:focus {
     }
 
     .pages > .items {
-        height: calc(100% - 65px);
+        height: calc(100% - 60px);
     }
 
     .pages .page {
