--- a/index.css
+++ b/index.css
@@ -13320,7 +13320,7 @@ textarea:focus {
   border: 0;
   opacity: 0.7;
   margin: 0 !important;
-  padding-top: 0;
+  padding-top: 2px;
   height: 30px;
 }
 .window.buttons .button:hover {
