--- a/index.scss
+++ b/index.scss
@@ -761,7 +761,7 @@ textarea:focus {
         border: 0;
         opacity: 0.7;
         margin: 0 !important;
-        padding-top: 0;
+        padding-top: 2px;
         height: 30px;
     }
 
