--- a/index.scss
+++ b/index.scss
@@ -242,18 +242,29 @@ textarea:focus {
         flex: 1;
     }
 
+    &:before,
+    &:after {
+        content: '';
+        display: block;
+        z-index: 5000;
+        transition: opacity 0.4s;
+        opacity: 0;
+        user-select: none;
+        pointer-events: none;
+    }
+
+    &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $background;
+    }
+
     &.is-loading {
         &:before {
-            content: '';
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
             opacity: 0.8;
-            background-color: $background;
-            z-index: 5000;
         }
 
         &:after {
@@ -265,7 +276,7 @@ textarea:focus {
             height: 5em;
             border-width: 0.4em;
             zoom: 2;
-            z-index: 5000;
+            opacity: 1;
         }
     }
 }
